--- a/Homework4/package.json
+++ b/Homework4/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "db:build": "docker build -t wad-pq .",
-    "db:up": "docker run -p 5432:5432 -d wad-pq"
+    "db:up": "docker run --name wad4-pq -p 5432:5432 -d wad-pq"
   },
   "keywords": [],
   "author": "",
